--- a/notebooks/TransferLearning.ipynb
+++ b/notebooks/TransferLearning.ipynb
@@ -18,26 +18,31 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'PyPDF2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 10\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m pyplot \u001B[38;5;28;01mas\u001B[39;00m plt\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtqdm\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mauto\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m tqdm\n\u001B[1;32m---> 10\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mEvaluation\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m get_confusion_matrix_for_model_and_data\n\u001B[0;32m     11\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mHelpers\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m get_project_root\n\u001B[0;32m     13\u001B[0m sys\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m../src\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "File \u001B[1;32m~\\Documents\\Uni\\EnsembleBasedTSC\\src\\Evaluation.py:12\u001B[0m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m keras\n\u001B[0;32m     11\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtoolz\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m groupby\n\u001B[1;32m---> 12\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mPyPDF2\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m PdfMerger\n\u001B[0;32m     13\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[0;32m     14\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mseaborn\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01msns\u001B[39;00m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'PyPDF2'"
+     ]
     }
    ],
    "source": [
     "import json\n",
     "import sys\n",
     "from functools import partial\n",
+    "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from Evaluation import get_confusion_matrix_for_model_and_data\n",
-    "from Helpers import get_project_root\n",
+    "from src.Evaluation import get_confusion_matrix_for_model_and_data\n",
+    "from src.Helpers import get_project_root\n",
     "\n",
     "sys.path.append(\"../src\")\n",
     "\n",
@@ -45,8 +50,10 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
-    "from TrainProdecure import train_single_model\n",
-    "from ModelBuilder import get_FCN\n",
+    "from src.TrainProdecure import train_single_model\n",
+    "from src.ModelBuilder import get_FCN\n",
+    "from src.LoadData import get_fcn_datasets_test_train_np_arrays\n",
+    "from src.Helpers import (append_to_csv, get_project_root)\n",
     "\n",
     "tf.config.list_physical_devices('GPU')"
    ]
@@ -62,8 +69,6 @@
    },
    "outputs": [],
    "source": [
-    "from LoadData import get_fcn_datasets_test_train_np_arrays\n",
-    "\n",
     "USED_DATASETS = get_fcn_datasets_test_train_np_arrays('../datasets/')\n",
     "GENERATE_MODEL = partial(get_FCN, transfer_learning=True)\n",
     "MODEL_NAME = 'Pre-Trained FCN'\n",
@@ -74,18 +79,6 @@
     "CSV_PATH = str(get_project_root() / \"results/transfer_learning.csv\")\n",
     "MODEL_PATH = str(get_project_root() / \"models/transfer_learning\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "def flatten(l):\n",
-    "    return [item for sublist in l for item in sublist]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
   },
   {
    "cell_type": "code",
@@ -112,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def fine_tune_model(pre_trained_model, x_train, y_train, x_test, y_test, dataset_name):\n",
@@ -134,25 +127,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "def two_confusion_matrices(confusion_matrix_1, model_name_1, confusion_matrix_2, model_name_2, dataset_name):\n",
-    "    plt.figure(figsize=(20, 10))\n",
-    "    plt.title(f'Transfer Learning for {dataset_name}')\n",
-    "    plt.subplot(1, 2, 1)\n",
-    "    sns.heatmap(confusion_matrix_1, annot=True, fmt=\"d\")\n",
-    "    plt.title(f\"Confusion Matrix for {model_name_1}\")\n",
-    "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label')\n",
+    "# Create some pretrained models\n",
+    "pretrained_models = []\n",
     "\n",
-    "    plt.subplot(1, 2, 2)\n",
-    "    sns.heatmap(confusion_matrix_2, annot=True, fmt=\"d\")\n",
-    "    plt.title(f\"Confusion Matrix for {model_name_2}\")\n",
-    "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label')\n",
-    "    plt.show()"
+    "for dataset_name, data_dict in tqdm(USED_DATASETS.items(), unit='datasets', desc='Transfer Learning for all datasets'):\n",
+    "    print(f\"Training model targeting dataset {dataset_name}\")\n",
+    "\n",
+    "    x_train, y_train = data_dict['train_data']\n",
+    "    x_test, y_test = data_dict['test_data']\n",
+    "    pre_trained_model, pre_train_history = transfer_learning_model_one_dataset(                x_train, y_train, dataset_name)\n",
+    "    pretrained_models.append((pre_trained_model, dataset_name))"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_project_root' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Copy parameters of the pre-trained models and fine-tune them on the target datasets\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m model_path \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mstr\u001B[39m(\u001B[43mget_project_root\u001B[49m() \u001B[38;5;241m/\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmodels\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      3\u001B[0m result_csv_path \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mstr\u001B[39m(get_project_root()) \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mresults/FCNTransferLearning_\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mlen\u001B[39m(USED_DATASETS\u001B[38;5;241m.\u001B[39mitems()))\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (csv_path \u001B[38;5;241m:=\u001B[39m Path(result_csv_path))\u001B[38;5;241m.\u001B[39mexists():\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'get_project_root' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Copy parameters of the pre-trained models and fine-tune them on the target datasets\n",
+    "model_path = str(get_project_root() / \"models\")\n",
+    "result_csv_path = str(get_project_root()) + \"results/FCNTransferLearning_\" + str(len(USED_DATASETS.items()))\n",
+    "\n",
+    "if not (csv_path := Path(result_csv_path)).exists():\n",
+    "    csv_path.touch()\n",
+    "    append_to_csv(result_csv_path, [\"Dataset\", \"Model\", \"Test Loss\", \"Test Accuracy\", \"Confusion Matrix\", \"History\"])\n",
+    "\n",
+    "for (pre_trained_model, pretrain_ds_name) in tqdm(pretrained_models, unit=\"models\", desc=\"Fine-tuning models\"):\n",
+    "    datasets_subset = {name: value for name, value in USED_DATASETS.items() if name != pretrain_ds_name}\n",
+    "    for dataset_name, data_dict in datasets_subset.items():\n",
+    "        print(f\"Fine-tuning model on dataset {dataset_name}\")\n",
+    "\n",
+    "        x_train, y_train = data_dict['train_data']\n",
+    "        x_test, y_test = data_dict['test_data']\n",
+    "\n",
+    "        # Fine-tuning:\n",
+    "        model, test_loss, test_acc, history = fine_tune_model(\n",
+    "            pre_trained_model, x_train, y_train, x_test, y_test, dataset_name\n",
+    "        )\n",
+    "\n",
+    "        model_name = f\"FCN pretrain-{pretrain_ds_name}\"\n",
+    "\n",
+    "        # save csv\n",
+    "        row = [\n",
+    "            dataset_name,\n",
+    "            model_name,\n",
+    "            test_loss,\n",
+    "            test_acc,\n",
+    "            json.dumps(\n",
+    "                get_confusion_matrix_for_model_and_data(\n",
+    "                    pre_trained_model, x_test, y_test\n",
+    "                ).tolist()\n",
+    "            ),\n",
+    "            json.dumps(history.history),\n",
+    "        ]\n",
+    "        append_to_csv(result_csv_path, row)\n",
+    "        # save model\n",
+    "        model_ds_path = model_path + \"/\" + dataset_name\n",
+    "        Path(model_ds_path).mkdir(exist_ok=True, parents=True)\n",
+    "        model.save(model_ds_path + \"/\" + model_name + \".h5\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
