--- a/notebooks/TrainProcedure_example.ipynb
+++ b/notebooks/TrainProcedure_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -12,6 +12,7 @@
     "import math\n",
     "import os\n",
     "import logging\n",
+    "import pandas as pd\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
     "import tensorflow as tf\n",
     "tf.get_logger().setLevel(logging.WARNING)\n",
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -287,14 +288,70 @@
     }
    },
    "outputs": [],
+   "source": [
+    "path_train_MCDCNN_improved = '../results/train__MCDCNN_improved_MCDCNN_improved_MCDCNN_improved_MCDCNN_improved_MCDCNN_improved_MCDCNN_improved_MCDCNN_improved_MCDCNN_improved_MCDCNN_improved_MCDCNN_improved_10_datasets.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_mcdcnn_improved_individual_models \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(path_train_MCDCNN_improved)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df_mcdcnn_improved_individual_models = pd.read_csv(path_train_MCDCNN_improved)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cricket_y\n",
+      "distal_phalanax_tw\n",
+      "egg_five_days\n",
+      "electric_devices\n",
+      "face_ucr\n",
+      "mote_strain\n",
+      "power_cons\n",
+      "sony_robot\n",
+      "swedish_leaf\n",
+      "synthetic_control\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_confusion_matrix_plot_from_csv(path_train_MCDCNN_improved, verbose=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ts_ensemble",
    "language": "python",
-   "name": "python3"
+   "name": "ts_ensemble"
   },
   "language_info": {
    "codemirror_mode": {
