--- a/notebooks/Visualise results/VisualiseTrainingResultsAugmentedData.ipynb
+++ b/notebooks/Visualise results/VisualiseTrainingResultsAugmentedData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "ec4d954b-735a-4fc8-b9cd-d21e79f08042",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "d66d85a2-ce51-49bf-82cf-00c293f943e6",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "194d0cc0-79d7-4c21-9617-fb32d0fd3611",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "f37a6d47-2f7f-4dc3-a38a-de4de99a1dd9",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "f0e60a7a-0055-4cbe-ad7d-d11adbe48862",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "6547a39c-4bdf-4932-8a47-2ce830678f20",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "ecd68960-c44b-45b3-88b8-b1b1bcd11ee5",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "b10735e0-87ab-4191-9b0f-c1baecc419b9",
    "metadata": {},
    "outputs": [
@@ -118,9 +118,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/slurm_tmpdir/job_21778843/ipykernel_2691042/1779337110.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/scratch/slurm_tmpdir/job_21782299/ipykernel_3135352/1779337110.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  df_train_individual_models_mean = df_train_individual_models\\\n",
-      "/scratch/slurm_tmpdir/job_21778843/ipykernel_2691042/1779337110.py:9: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/scratch/slurm_tmpdir/job_21782299/ipykernel_3135352/1779337110.py:9: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  df_train_all_ensembles_mean = df_train_all_ensembles.groupby(['model_name',], as_index=False).mean()[['model_name', 'test_acc']]\n"
      ]
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "87a17240-1aef-484a-ba32-c77196b65fda",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "4     Resnet  0.684863     False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "66713f2d-700e-4989-bfe0-7132adff64ba",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "1                                          FCN      0.602079     False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "a2b72510-b57d-4efc-9cf4-c971d7453eef",
    "metadata": {},
    "outputs": [],
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "4d3e1d5d-1144-451e-87d1-dfdccf5d520d",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "5                                     FCN      0.602079     False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "9e500356-02d1-45a9-a557-8e88f4527eeb",
    "metadata": {},
    "outputs": [],
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "c8842c84-66a3-4922-9e4e-da08768986df",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "fe1ecc0f-481a-409d-b97c-ddb026718aee",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
        "3                     FCN      0.602079     False"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "1db825a9-8d26-42d3-8a17-5fa938070622",
    "metadata": {},
    "outputs": [],
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "16fe2585-796b-4a6e-8ba2-ed67e4928e4c",
    "metadata": {},
    "outputs": [],
@@ -829,17 +829,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "140422ac-6333-4794-887f-b613d275b37f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_best_ensemble_and_individual_model_to_persist' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf_best_ensemble_and_individual_model_to_persist\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_best_ensemble_and_individual_model_to_persist' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df_best_ensemble_and_individual_model_to_persist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "10e3de8c-0b63-4397-a2b8-59d3243769c8",
    "metadata": {},
    "outputs": [],
@@ -851,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "9e587a80-f851-4e32-964e-e81b40ac5624",
    "metadata": {},
    "outputs": [
@@ -872,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "7f944535-38cb-4d72-8e4c-9f64dc954445",
    "metadata": {},
    "outputs": [
@@ -893,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "9be29d06-ed62-42c6-b524-0951acd83439",
    "metadata": {},
    "outputs": [
@@ -914,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "id": "f0630c5c-b99d-4d49-8b0d-8c274e690376",
    "metadata": {},
    "outputs": [],
@@ -934,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "id": "d47dcbf2-834b-48c0-a9a2-55bfd2d2ca17",
    "metadata": {},
    "outputs": [
@@ -963,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "id": "9e9997c6-0c1c-499e-9631-7940f63c63c0",
    "metadata": {},
    "outputs": [
